[tool.poetry]
name = "realitysnihunter"
version = "0.1.0"
description = ""
authors = ["eastsidekillas"]
license = ""
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.10.0"
cryptography = "^46.0.3"
ipaddress = "^1.0.23"
requests = "^2.32.5"
pyinstaller = "^6.16.0"
aiohttp = "^3.13.1"
maxminddb = "^3.0.0"


[[tool.poetry.packages]]
include = "ui"

[[tool.poetry.packages]]
include = "core"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
